--- a/public/index.html
+++ b/public/index.html
@@ -1,120 +1,190 @@
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tik Tak Toe Game</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    .fade-in {
-      animation: fade-in 0.5s ease-in-out;
-    }
+import React, { useState, useEffect } from 'react';
+import { X, Circle, RefreshCw, PlayCircle } from 'lucide-react';
 
-    @keyframes fade-in {
-      from {
-        opacity: 0;
-      }
-      to {
-        opacity: 1;
-      }
-    }
+const TicTacToe = () => {
+  const [board, setBoard] = useState(Array(9).fill(null));
+  const [currentPlayer, setCurrentPlayer] = useState('X');
+  const [winner, setWinner] = useState(null);
+  const [gameStarted, setGameStarted] = useState(false);
+  const [clickSound, setClickSound] = useState(null);
+  const [winSound, setWinSound] = useState(null);
 
-    .winner-popup {
-      animation: popup 0.4s ease-in-out;
-    }
+  // Load sound effects on component mount
+  useEffect(() => {
+    const clickAudio = new Audio('/api/placeholder/click-sound.mp3');
+    const winAudio = new Audio('/api/placeholder/win-sound.mp3');
+    setClickSound(clickAudio);
+    setWinSound(winAudio);
+  }, []);
 
-    @keyframes popup {
-      0% {
-        transform: scale(0.5);
-        opacity: 0;
-      }
-      100% {
-        transform: scale(1);
-        opacity: 1;
-      }
-    }
-  </style>
-</head>
-<body class="bg-gradient-to-r from-purple-500 to-blue-500 h-screen flex flex-col items-center justify-center">
-  <div class="text-center">
-    <h1 class="text-4xl md:text-5xl text-white font-bold mb-8">Tik Tak Toe</h1>
-    <button id="startButton" class="bg-green-500 hover:bg-green-600 text-white px-6 py-3 rounded-full text-xl font-semibold shadow-lg transition-transform transform hover:scale-110">Start Game</button>
-  </div>
-
-  <div id="gameBoard" class="hidden grid grid-cols-3 gap-4 mt-12 bg-white p-6 rounded-lg shadow-2xl">
-    <!-- Game cells will be dynamically generated -->
-  </div>
-
-  <div id="winnerPopup" class="hidden fixed inset-0 bg-black bg-opacity-70 flex items-center justify-center">
-    <div class="winner-popup bg-white text-center p-8 rounded-lg shadow-lg">
-      <h2 id="winnerText" class="text-2xl font-bold mb-4">Player X Wins!</h2>
-      <button id="restartButton" class="bg-blue-500 hover:bg-blue-600 text-white px-6 py-3 rounded-full text-lg font-semibold shadow-lg transition-transform transform hover:scale-110">Play Again</button>
-    </div>
-  </div>
-
-  <script>
-    const startButton = document.getElementById('startButton');
-    const gameBoard = document.getElementById('gameBoard');
-    const winnerPopup = document.getElementById('winnerPopup');
-    const winnerText = document.getElementById('winnerText');
-    const restartButton = document.getElementById('restartButton');
-
-    let currentPlayer = 'X';
-    let boardState = Array(9).fill(null);
-    const winningCombinations = [
-      [0, 1, 2], [3, 4, 5], [6, 7, 8],
-      [0, 3, 6], [1, 4, 7], [2, 5, 8],
-      [0, 4, 8], [2, 4, 6]
+  // Check for winner or draw
+  const checkWinner = (boardState) => {
+    const winPatterns = [
+      [0, 1, 2], [3, 4, 5], [6, 7, 8], // Rows
+      [0, 3, 6], [1, 4, 7], [2, 5, 8], // Columns
+      [0, 4, 8], [2, 4, 6] // Diagonals
     ];
 
-    startButton.addEventListener('click', () => {
-      gameBoard.classList.remove('hidden');
-      gameBoard.innerHTML = '';
-      currentPlayer = 'X';
-      boardState.fill(null);
-      createBoard();
-    });
-
-    restartButton.addEventListener('click', () => {
-      winnerPopup.classList.add('hidden');
-      gameBoard.innerHTML = '';
-      currentPlayer = 'X';
-      boardState.fill(null);
-      createBoard();
-    });
-
-    function createBoard() {
-      for (let i = 0; i < 9; i++) {
-        const cell = document.createElement('div');
-        cell.className = 'cell h-24 w-24 md:h-32 md:w-32 bg-gray-200 flex items-center justify-center text-4xl md:text-6xl font-bold cursor-pointer hover:bg-gray-300 rounded-lg shadow-md fade-in';
-        cell.dataset.index = i;
-        cell.addEventListener('click', () => makeMove(cell, i));
-        gameBoard.appendChild(cell);
+    for (let pattern of winPatterns) {
+      const [a, b, c] = pattern;
+      if (
+        boardState[a] && 
+        boardState[a] === boardState[b] && 
+        boardState[a] === boardState[c]
+      ) {
+        return boardState[a];
       }
     }
 
-    function makeMove(cell, index) {
-      if (boardState[index] || checkWinner()) return;
+    return boardState.every(cell => cell) ? 'draw' : null;
+  };
 
-      boardState[index] = currentPlayer;
-      cell.textContent = currentPlayer;
-      cell.classList.add(currentPlayer === 'X' ? 'text-blue-500' : 'text-red-500');
+  // Handle cell click
+  const handleCellClick = (index) => {
+    if (!gameStarted || board[index] || winner) return;
 
-      if (checkWinner()) {
-        winnerText.textContent = `Player ${currentPlayer} Wins!`;
-        winnerPopup.classList.remove('hidden');
-      } else if (boardState.every(cell => cell)) {
-        winnerText.textContent = 'It's a Draw!';
-        winnerPopup.classList.remove('hidden');
+    const newBoard = [...board];
+    newBoard[index] = currentPlayer;
+    setBoard(newBoard);
+
+    // Play click sound
+    if (clickSound) clickSound.play();
+
+    // Check for winner
+    const gameResult = checkWinner(newBoard);
+    if (gameResult) {
+      if (gameResult !== 'draw') {
+        setWinner(gameResult);
+        if (winSound) winSound.play();
+      } else {
+        setWinner('draw');
       }
+    } else {
+      // Switch players
+      setCurrentPlayer(currentPlayer === 'X' ? 'O' : 'X');
+    }
+  };
 
-      currentPlayer = currentPlayer === 'X' ? 'O' : 'X';
+  // Restart game
+  const restartGame = () => {
+    setBoard(Array(9).fill(null));
+    setCurrentPlayer('X');
+    setWinner(null);
+    setGameStarted(true);
+  };
+
+  // Start game
+  const startGame = () => {
+    setGameStarted(true);
+  };
+
+  // Render game cell
+  const renderCell = (index) => {
+    const value = board[index];
+    let cellColor = 'bg-blue-100 hover:bg-blue-200';
+    
+    if (value === 'X') {
+      cellColor = 'bg-red-200 text-red-700';
+    } else if (value === 'O') {
+      cellColor = 'bg-green-200 text-green-700';
     }
 
-    function checkWinner() {
-      return winningCombinations.some(combination =>
-        combination.every(index => boardState[index] === currentPlayer)
-      );
-    }
-  </script>
-</body>
-</html>
+    return (
+      <div 
+        key={index}
+        onClick={() => handleCellClick(index)}
+        className={`
+          w-full h-24 border-2 border-gray-300 flex items-center 
+          justify-center text-4xl font-bold cursor-pointer 
+          transition-all duration-300 ease-in-out transform 
+          hover:scale-105 ${cellColor}
+        `}
+      >
+        {value === 'X' && <X size={64} />}
+        {value === 'O' && <Circle size={64} />}
+      </div>
+    );
+  };
+
+  // Determine player color and icon
+  const getPlayerIcon = (player) => {
+    return player === 'X' 
+      ? <X className="text-red-500 mr-2" size={32} /> 
+      : <Circle className="text-green-500 mr-2" size={32} />;
+  };
+
+  return (
+    <div className="min-h-screen bg-gradient-to-br from-blue-50 to-blue-100 flex flex-col items-center justify-center p-4">
+      {/* Game Container */}
+      <div className="bg-white shadow-2xl rounded-2xl p-6 w-full max-w-md">
+        {/* Game Title */}
+        <h1 className="text-3xl font-bold text-center mb-6 text-gray-800">
+          Tic Tac Toe
+        </h1>
+
+        {/* Start Game Button */}
+        {!gameStarted && (
+          <div className="text-center">
+            <button 
+              onClick={startGame}
+              className="
+                bg-blue-500 text-white px-6 py-3 rounded-full 
+                flex items-center justify-center mx-auto 
+                hover:bg-blue-600 transition-colors 
+                transform hover:scale-105
+              "
+            >
+              <PlayCircle className="mr-2" />
+              Start Game
+            </button>
+          </div>
+        )}
+
+        {/* Game Board */}
+        {gameStarted && (
+          <>
+            <div className="grid grid-cols-3 gap-2 mb-6">
+              {[0, 1, 2, 3, 4, 5, 6, 7, 8].map(renderCell)}
+            </div>
+
+            {/* Current Player Indicator */}
+            <div className="flex items-center justify-center mb-4">
+              <span className="text-xl font-semibold flex items-center">
+                {getPlayerIcon(currentPlayer)}
+                Current Player
+              </span>
+            </div>
+          </>
+        )}
+
+        {/* Winner Popup */}
+        {winner && (
+          <div className="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+            <div className="bg-white p-8 rounded-2xl text-center shadow-2xl">
+              <h2 className="text-3xl font-bold mb-4">
+                {winner === 'draw' 
+                  ? "It's a Draw!" 
+                  : `Player ${winner} Wins!`}
+              </h2>
+              
+              <button 
+                onClick={restartGame}
+                className="
+                  bg-blue-500 text-white px-6 py-3 rounded-full 
+                  flex items-center justify-center mx-auto 
+                  hover:bg-blue-600 transition-colors 
+                  transform hover:scale-105 mt-4
+                "
+              >
+                <RefreshCw className="mr-2" />
+                Restart Game
+              </button>
+            </div>
+          </div>
+        )}
+      </div>
+    </div>
+  );
+};
+
+export default TicTacToe;
